--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "element-ui": "^2.1.0",
+    "md5": "^2.2.1",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
