--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.17.1",
     "element-ui": "^2.1.0",
     "md5": "^2.2.1",
-    "nuxt": "^1.0.0"
+    "nuxt": "^1.0.0",
+    "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.0.0-rc.2",
